# aws-lambda-databricks

./: .local.env  README.md  pyproject.toml  template.yaml
.github/workflows/: sam-pipeline.yml
lambda_databricks/: app.py  main.py
lambda_databricks/clients/: databricks.py
lambda_databricks/credentials/: helpers.py
lambda_databricks/credentials/secrets/: databricks.py
lambda_databricks/interfaces/: credentials.py
tests/: test_databricks.py
